force-app/main/default/objects/FieloPLT__Promotion__c/FieloPLT__Promotion__c.object-meta.xml
<CustomObject>
    <description>Promotions is a way of encouraging Members to behave in a particular way so as to drive their engagement.</description>
    <label>Promotion</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>