force-app/main/default/objects/FieloPLT__Promotion__c/fields/FieloPLT__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Description__c</fullName>
    <description>Promotion detailed description.</description>
    <inlineHelpText>Enter a description for your Promotion. You can use this internally or make it visible to Members on your loyalty portal.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>