force-app/main/default/objects/FieloPLT__Promotion__c/fields/FieloPLT__EndDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__EndDate__c</fullName>
    <description>Promotion final date. If no Final date is established, Promotion lasts indefinetely as long as it remains &quot;Active&quot;.</description>
    <inlineHelpText>Choose a date to end the Promotion. If blank, the Promotion will last as long as it remains Active.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>