force-app/main/default/objects/FieloPLT__Promotion__c/fields/FieloPLT__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Program that the Promotion belongs to.</description>
    <inlineHelpText>This is the Program you&apos;re implementing the Promotion in.</inlineHelpText>
    <label>Program</label>
    <referenceTo>FieloPLT__Program__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>