force-app/main/default/objects/FieloPLT__Promotion__c/fields/FieloPLT__StartDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__StartDate__c</fullName>
    <description>Promotion initial date. If no Initial date is established, Promotion starts when its status changes to &quot;Active&quot; or &quot;Pending&quot;, if an Approval Workflow process is required.</description>
    <inlineHelpText>Choose a date to start the Promotion. If blank, the Promotion will need to be activated manually.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>