force-app/main/default/objects/FieloPLT__Promotion__c/validationRules/FieloPLT__ValidateDates.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__ValidateDates</fullName>
    <active>true</active>
    <description>The End Date must be on or after the Start Date.</description>
    <errorConditionFormula>FieloPLT__StartDate__c   &gt; FieloPLT__EndDate__c</errorConditionFormula>
    <errorMessage>The End Date must be on or after the Start Date.</errorMessage>
</ValidationRule>