force-app/main/default/objects/FieloPLT__Promotion__c/validationRules/FieloPLT__ValidatesStatusUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__ValidatesStatusUpdate</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(FieloPLT__Status__c) &amp;&amp;
(
( ISPICKVAL(PRIORVALUE(FieloPLT__Status__c), &apos;Draft&apos;) &amp;&amp;
NOT(ISPICKVAL(FieloPLT__Status__c,&apos;Active&apos;)) &amp;&amp; NOT(ISPICKVAL(FieloPLT__Status__c,&apos;Pending&apos;)) &amp;&amp; NOT(ISPICKVAL(FieloPLT__Status__c,&apos;Scheduled&apos;)))
||
( ISPICKVAL(PRIORVALUE(FieloPLT__Status__c), &apos;Pending&apos;) &amp;&amp;
NOT(ISPICKVAL(FieloPLT__Status__c,&apos;Rejected&apos;)) &amp;&amp; NOT(ISPICKVAL(FieloPLT__Status__c,&apos;Active&apos;)) )
||
( ISPICKVAL(PRIORVALUE(FieloPLT__Status__c), &apos;Scheduled&apos;) &amp;&amp;
NOT(ISPICKVAL(FieloPLT__Status__c,&apos;Inactive&apos;)) &amp;&amp; FieloPLT__StartDate__c &gt;= TODAY() &amp;&amp; NOT(ISPICKVAL(FieloPLT__Status__c,&apos;Active&apos;)) )
||
( ISPICKVAL(PRIORVALUE(FieloPLT__Status__c), &apos;Active&apos;) &amp;&amp;
NOT(ISPICKVAL(FieloPLT__Status__c,&apos;Draft&apos;)) &amp;&amp; NOT(ISPICKVAL(FieloPLT__Status__c,&apos;Inactive&apos;)) &amp;&amp; FieloPLT__EndDate__c &gt;= TODAY() &amp;&amp; NOT(ISPICKVAL(FieloPLT__Status__c,&apos;Completed&apos;)) )
||
( ISPICKVAL(PRIORVALUE(FieloPLT__Status__c), &apos;Rejected&apos;) &amp;&amp;
ISPICKVAL(FieloPLT__Status__c,&apos;Draft&apos;) )
||
( ISPICKVAL(PRIORVALUE(FieloPLT__Status__c), &apos;Inactive&apos;) &amp;&amp;
ISPICKVAL(FieloPLT__Status__c,&apos;Draft&apos;) )
)</errorConditionFormula>
    <errorDisplayField>FieloPLT__Status__c</errorDisplayField>
    <errorMessage>Status change is invalid.</errorMessage>
</ValidationRule>